# nao-ocr

./: .gitignore  APIwrappers.h  CMakeLists.txt  OcrModule.hpp  README.md  picProcessing.hpp  picSegmentation.cpp  picSegmentation.hpp  qiproject.xml
TextRecognition/: CMakeLists.txt  Doxyfile  FindLEPTONICA.cmake  FindTESSERACT.cmake  OcrModule.cpp  README.md  findLEPTONICA.cmake~  lept-config.cmake~  lept.pc~  leptonica-config .cmake~  leptonica-config.cmake~  leptonica-config2.cmake~  main.cpp  nao.config  nao.config~  naoocr.cpp  picProcessing.cpp  picSceneDetect.cpp  picSceneDetect.hpp  tesseract-config .cmake~  tesseract-config.cmake~  tesseract.h~  tesseract.pc~
TextRecognition/OpenNAO/: nao.config  naoocr
TextRecognition/Output/: nao.config~  result.txt
TextRecognition/Output/za_latex/: toMove
TextRecognition/build-atom/: CMakeCache.txt  Makefile  cmake_install.cmake
TextRecognition/build-pc/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
